--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8">
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-		<meta name="description" content="">
+		
 		<link rel="stylesheet" href="./assets/style.css">
 		<script src="works.js" defer ></script>
 	</head>
@@ -35,7 +35,7 @@
 					<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 				</article>
 			</section>
-			<section id="portfolio">
+			<section id="portfolio">bonjour les gens
 			
 			</section>
 			<section id="contact">
@@ -62,3 +62,4 @@
 		</footer>
 	</body>
 </html>
+
