--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -35,7 +35,7 @@
 					<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 				</article>
 			</section>
-			<section id="portfolio">bonjour les gens
+			<section id="portfolio">
 			
 			</section>
 			<section id="contact">
