--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,16 +10,17 @@
 		
 		<link rel="stylesheet" href="./assets/style.css">
 		<script src="works.js" defer ></script>
+		<script src="login.js" defer ></script>
 	</head>
 	<body>
 		<header>
 			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 			<nav>
 				<ul>
-					<li>projets</li>
-					<li>contact</li>
-					<li>login</li>
-					<li><img id="insta" src="./assets/icons/instagram.png" alt="Instagram"></li>
+					<li><b>projets</b></li>
+					<a href="#mon-ancre"><li>contact</li></a>
+					<a href = "./login.html"><li>login</li></a>
+					<a href="https://www.instagram.com" target="_blank"><li><img id="insta" src="./assets/icons/instagram.png" alt="Instagram"></li></a>
 				</ul>
 			</nav>
 		</header>
@@ -40,7 +41,7 @@
 			</section>
 			<section id="contact">
 				<h2>Contact</h2>
-				<p>Vous avez un projet ? Discutons-en !</p>
+				<p id="mon-ancre">Vous avez un projet ? Discutons-en !</p>
 				<form action="#" method="post">
 					<label for="name">Nom</label>
 					<input type="text" name="name" id="name">
@@ -48,7 +49,7 @@
 					<input type="email" name="email" id="email">
 					<label for="message">Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
-					<input type="submit" value="Envoyer">
+					<input type="submit" value="Envoyer" id="envoyer-contact">
 				</form>
 			</section>
 		</main>
