--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,26 +2,26 @@
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8">
-		<title>Sophie Bluel - Architecte d'intérieur</title>
+		<title>Sophie Bluel - Architecte d'intérieur_index</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-		
+		<meta name="description" content="">
 		<link rel="stylesheet" href="./assets/style.css">
 		<script src="works.js" defer ></script>
-		<script src="login.js" defer ></script>
+		
 	</head>
 	<body>
 		<header>
 			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 			<nav>
-				<ul>
-					<li><b>projets</b></li>
-					<a href="#mon-ancre"><li>contact</li></a>
-					<a href = "./login.html"><li>login</li></a>
-					<a href="https://www.instagram.com" target="_blank"><li><img id="insta" src="./assets/icons/instagram.png" alt="Instagram"></li></a>
-				</ul>
+				<div>
+					<h4><b>projets</b></h4>
+					<a href="#mon-ancre"><h4>contact</h4></a>
+					<a href = "./login.html"><h4>login</h4></a>
+					<a href="https://www.instagram.com" target="_blank"><h4><img id="insta" src="./assets/icons/instagram.png" alt="Instagram"></h4></a>
+				</div>
 			</nav>
 		</header>
 		<main>
@@ -44,12 +44,12 @@
 				<p id="mon-ancre">Vous avez un projet ? Discutons-en !</p>
 				<form action="#" method="post">
 					<label for="name">Nom</label>
-					<input type="text" name="name" id="name">
+					<input type="text" name="name" id="name" autocomplete="Name">
 					<label for="email">Email</label>
-					<input type="email" name="email" id="email">
+					<input type="email" name="email" id="email" autocomplete="email">
 					<label for="message">Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
-					<input type="submit" value="Envoyer" id="envoyer-contact">
+					<input type="submit" value="Envoyer" id="envoyer-contact" autocomplete="envoyer">
 				</form>
 			</section>
 		</main>
