modale en cours + structure dynam

--- a/FrontEnd/home page.html
+++ b/FrontEnd/home page.html
@@ -14,15 +14,17 @@
 	</head>
 	<body>
 		<header>
-			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-			<nav>
-				<div>
-					<h4><b>projets</b></h4>
-					<a href="#mon-ancre"><h4>contact</h4></a>
-					<a href = "./login.html"><h4>login</h4></a>
-					<a href="https://www.instagram.com" target="_blank"><h4><img id="insta" src="./assets/icons/instagram.png" alt="Instagram"></h4></a>
-				</div>
-			</nav>
+			<div class="frame">
+				<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+				<nav>
+					<div>
+						<h4>projets</h4>
+						<a href="#monAncre"><h4>contact</h4></a>
+						<a href = "login.html"><h4>login</h4></a>
+						<a href="https://www.instagram.com" target="_blank"><h4><img id="insta" src="assets/icons/instagram.png" alt="Instagram"></h4></a>
+					</div>
+				</nav>
+			</div>
 		</header>
 		<main>
 			<section id="introduction">
@@ -37,7 +39,9 @@
 				</article>
 			</section>
 			<section id="portfolio">
-			
+				<div class="container2">
+					<h2>Mes projets</h2>
+				</div>
 			</section>
 			<section id="contact">
 				<h2>Contact</h2>
@@ -57,7 +61,7 @@
 		<footer>
 			<nav>
 				<ul>
-					<li>Mentions Légales</li>
+					<li id="mention-legale">Mentions Légales</li>
 				</ul>
 			</nav>
 		</footer>
