--- a/FrontEnd/home page_edit1.html
+++ b/FrontEnd/home page_edit1.html
@@ -43,10 +43,7 @@
 			<div class="modal" aria-modal="true" role="dialog" aria-labelledby="titlemodal" aria-describedby="dialog1Desc">
 				<button id= "trigger" class="close-modal
 				 modal-trigger">X</button>
-				<h1 title="titlemodale" id="titre-modale">galerie photo</h1>
-				<div id="container-gallery-modale">
-
-				</div>
+				<h1 title="titlemodale">galerie photos</h1>
 				<p>  hear the jury' still out on science. As you may or may not know, Lindsay and  have hit  bit of  rough patch. Michael! Guy pro.</p>
 			</div>
 		</aside>
