--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -16,15 +16,17 @@
 	</head>
     <body>
         <header>
-        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-        <nav>
-            <div>
-                <a href=" ./home page.html"><h4>projets</h4></a>
-                <a href="./home page.html#mon-ancre"><h4>contact</h4></a>
-                <h4><b>login</b></h4>
-                <a href="https://www.instagram.com" target="_blank"><div><img id="insta" src="./assets/icons/instagram.png" alt="Instagram"></div></a>
-            </div>
-        </nav>
+            <div class="frame">
+				<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+				<nav>
+					<div>
+						<h4>projets</h4>
+						<a href="#monAncre"><h4>contact</h4></a>
+						<a href = "login.html"><h4>login</h4></a>
+						<a href="https://www.instagram.com" target="_blank"><h4><img id="insta" src="assets/icons/instagram.png" alt="Instagram"></h4></a>
+					</div>
+				</nav>
+			</div>
         </header>
         <main>
             <section class="loguin">
@@ -43,7 +45,7 @@
         <footer>
 			<nav>
 				<ul>
-					<li>Mentions Légales</li>
+					<li id="mention-legale">Mentions Légales</li>
 				</ul>
 			</nav>
 		</footer>
