modales en cours, projetmodale ok, mise en forme

--- a/FrontEnd/home page.html
+++ b/FrontEnd/home page.html
@@ -19,7 +19,7 @@
 				<nav>
 					<div>
 						<h4>projets</h4>
-						<a href="#monAncre"><h4>contact</h4></a>
+						<a href="#mon-ancre"><h4>contact</h4></a>
 						<a href = "login.html"><h4>login</h4></a>
 						<a href="https://www.instagram.com" target="_blank"><h4><img id="insta" src="assets/icons/instagram.png" alt="Instagram"></h4></a>
 					</div>
