ajout non rechergement pagemodale et icons

--- a/FrontEnd/home page_edit.html
+++ b/FrontEnd/home page_edit.html
@@ -51,8 +51,12 @@
 		<aside class="modal2-container2">
 			<div  class="overlay2  modal2-trigger2"></div>	
 			<div class="modal2" aria-modal="true" role="dialog" aria-labelledby="titlemodal2" aria-describedby="dialog2Desc">
-				<button id= "trigger2" class="close-modal2
+				<div>
+					<button id="reviens-arriere-page" class="modal2-trigger2"><i class="fa-solid fa-arrow-left"></i></button>
+					<button id= "trigger2" class="close-modal2
 					modal2-trigger2">X</button>
+				</div>
+				
 				<h1 title="titlemodale2" id="titre-modale2">ajout photos</h1>
 				<div id="frame2-modale2">
 					<div id="telechgmntphoto">
@@ -80,8 +84,11 @@
 		<aside class="modal3-container3">
 			<div  class="overlay3  modal3-trigger3"></div>	
 			<div class="modal3" aria-modal="true" role="dialog" aria-labelledby="titlemodal" aria-describedby="dialog1Desc">
-				<button id= "trigger3" class="close-modal3
-				modal3-trigger3">X</button>
+				<div>
+					<button id="reviens-arriere-page2" class="modal3-trigger3"><i class="fa-solid fa-arrow-left"></i></button>
+					<button id= "trigger3" class="close-modal2
+					modal33-trigger3">X</button>
+				</div>
 				<h1 title="titlemodale3" id="titre-modale3">ajout photos</h1>
 				<div id="container-modale3">
 					
