ereur pour works

--- a/FrontEnd/home page_edit.html
+++ b/FrontEnd/home page_edit.html
@@ -64,18 +64,18 @@
 						<img id="imageDisplay" src="#" alt="Image importé" style="max-width: 100%; display: none;">
 					</div>
 					<input type="file" id="imageInput" accept="image/png, image/jpeg">
-    				<button id="btn-ad-photo"> + Ajouter une photo</button>
+    				<button id="btn-ad-photo"> + Ajouter photo</button>
 																																<!--bouton pour ajouter photo à telecharger-->
 					<p id="text-modal2">jpg, png : 4mo max</p>
 				</div>
 				<form id="formulaire3">
-					<label for="title">Titre</label>
-					<input class="modal2formulaire" type="text" name="title" id="title" autocomplete="text" required>					<!--formulaire-->
+					<label for="titleNewWorks">Titre</label>
+					<input class="modal2formulaire" type="text" name="title" id="titleNewWorks" required>					<!--formulaire-->
 					<label for="categorychoix">Catégorie</label>
 					<select name="category" id="categorychoix" required>
-						<option value="category=1">Objets</option>
-						<option value="category=2">Appartements</option>											<!--formulaire deroulant-->
-						<option value="category=3">Hôtels et restaurants</option>
+						<option value="1">Objets</option>
+						<option value="2">Appartements</option>											<!--formulaire deroulant-->
+						<option value="3">Hôtels et restaurants</option>
 					</select>
 				</form>
 				
