commentaires et btn valider2

--- a/FrontEnd/home page_edit.html
+++ b/FrontEnd/home page_edit.html
@@ -39,9 +39,8 @@
 			<div class="modal" aria-modal="true" role="dialog" aria-labelledby="titlemodal" aria-describedby="dialog1Desc">
 				<button id= "trigger" class="close-modal
 				modal-trigger">X</button>
-				<div class= "popup"></div>
 				<h1 title="titlemodale" id="titre-modale">galerie photo</h1>
-				<div class= "popup"></div>
+				<div id= "popup1"></div>
 				<div id="container-gallery-modale">
 				</div>
 				<p id="ligne">__________________________________________________________</p>
@@ -57,8 +56,8 @@
 					<button id= "trigger2" class="close-modal2
 					modal2-trigger2">X</button>
 				</div>
-				
-				<h1 title="titlemodale2" id="titre-modale2">ajout photos</h1>													<!--titre modal2-->
+				<h1 title="titlemodale2" id="titre-modale2">ajout photos</h1>														<!--titre modal2-->
+				<div id="popup2"></div>													
 				<div id="frame2-modale2">
 					<div id="telechgmntphoto">																					<!--div pour la photo à telecharger-->
 						<img id="icone-image" src="assets/icons/picture-svgrepo-com 1.png" alt="icone image pour téléchargement">
