--- a/FrontEnd/home_page.html
+++ b/FrontEnd/home_page.html
@@ -16,15 +16,15 @@
 		<header>
 			<div class="frame">
 				<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-				<nav>
-					<div>
-						<h4>projets</h4>
-						<a href="#mon-ancre"><h4>contact</h4></a>
-						<a href = "login.html"><h4>login</h4></a>
-						<a href="https://www.instagram.com" target="_blank"><h4><img id="insta" src="assets/icons/instagram.png" alt="Instagram"></h4></a>
-					</div>
-				</nav>
 			</div>
+			<nav>
+				<div>
+					<b>projets</b>
+					<a href="#mon-ancre"><h4>contact</h4></a>
+					<a href = "login.html"><h4>login</h4></a>
+					<a href="https://www.instagram.com" target="_blank"><h4><img id="insta" src="assets/icons/instagram.png" alt="Instagram"></h4></a>
+				</div>
+			</nav>
 		</header>
 		<main>
 			<section id="introduction">
