--- a/FrontEnd/home_page_edit.html
+++ b/FrontEnd/home_page_edit.html
@@ -80,7 +80,8 @@
 						<option value="3">Hôtels et restaurants</option>
 					</select>
 				</form>
-				<button id="btn-valider2">valider </button>																		<!--bouton de validation à téléchargement photo-->
+				<button id="btn-valider2">valider </button>	
+				<p id="ligne2">__________________________________________________________</p>																	<!--bouton de validation à téléchargement photo-->
 			</div>
 		</aside>
 		<main>
