--- a/FrontEnd/home_page_edit.html
+++ b/FrontEnd/home_page_edit.html
@@ -19,14 +19,14 @@
 				<aside class="mode-edition">
 					<i class="fa-solid fa-pen-to-square"></i>
 					<p id="text-edition">Mode édition</p>
-					<a href ="home_page.html"><div  id="publier-changements" >Publier les changements</div></a> 
+					<a href ="index.html"><div  id="publier-changements" >Publier les changements</div></a> 
 				</aside>
 				<div class="frame">
 					<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 					<nav>
 						<div id="divNav">
 							<h4><b>projets</b></h4>
-							<a href="#mon-ancre"><h4>contact</h4></a>
+							<a href="index.html/#mon-ancre"><h4>contact</h4></a>
 							<h4 id="logout">logout</h4>
 							<a href="https://www.instagram.com" target="_blank"><h4><img id="insta" src="assets/icons/instagram.png" alt="Instagram"></h4></a>
 						</div>
