--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -18,8 +18,8 @@
 				<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 				<nav>
 					<div>
-						<a href="home_page.html"><h4>projets</h4></a>
-						<a href="home_page.html/#mon-ancre"><h4>contact</h4></a>
+						<a href="index.html"><h4>projets</h4></a>
+						<a href="index.html/#mon-ancre"><h4>contact</h4></a>
 						<b>login</b>
 						<a href="https://www.instagram.com" target="_blank"><h4><img id="insta" src="assets/icons/instagram.png" alt="Instagram"></h4></a>
 					</div>
